--- a/WiredBrainCoffeeAdmin/Pages/Index.cshtml
+++ b/WiredBrainCoffeeAdmin/Pages/Index.cshtml
@@ -14,6 +14,23 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
+                    The Basics
+                </div>
+                <div class="card-body">
+                    <p>Hello, today is @DateTime.Today.Date.ToString("dd/MM/YYYY").</p>
+                    @{
+                        var temperature = 25;
+                    }
+                    <p> The temperature is @temperature degrees.</p>
+                    @if(temperature<60)
+                        {
+                           <p>We recomend a coat until it warms up
+                               @(60-temperature) degrees.</p>
+                        }
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     Request Help
                 </div>
                 <div class="card-body">
